[package]
name = "ray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
indicatif = "0.17.2"
itertools = "0.10.5"
log = "0.4.17"
nalgebra = "0.31.4"
parry3d = "0.12.0"
rand = "0.8.5"
rayon = "1.6.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
