[package]
name = "ray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
indicatif = { version = "0.17.2", features = [ "rayon" ] }
itertools = "0.10.5"
nalgebra = "0.31.4"
parry3d = "0.12.0"
rand = "0.8.5"
rayon = "1.6.1"


[[bench]]
name = "scene1"
harness = false

[[bench]]
name = "scene2"
harness = false

[[bench]]
name = "scene3"
harness = false